[gd_scene load_steps=23 format=3 uid="uid://do85wm7qmftwm"]

[ext_resource type="Script" path="res://src/scripts/game-scripts/character_create.gd" id="1_t13y3"]
[ext_resource type="Texture2D" uid="uid://bmof2g6xlu2bf" path="res://src/ui/backgrounds/background.png" id="2_juskx"]
[ext_resource type="Texture2D" uid="uid://cx6ykjind73rd" path="res://src/ui/elements/race bar.png" id="3_yt8dn"]
[ext_resource type="Texture2D" uid="uid://10u8v4p7qqrb" path="res://src/ui/characters/character 1.png" id="4_vps2q"]
[ext_resource type="Texture2D" uid="uid://dv3mstmdt3l0p" path="res://src/ui/characters/c2.png" id="5_g5ftp"]
[ext_resource type="Texture2D" uid="uid://doi260lvadhgo" path="res://src/ui/characters/c3.png" id="6_contp"]
[ext_resource type="Texture2D" uid="uid://b6mi42u7yt1yy" path="res://src/ui/buttons/arrow_ (1).png" id="7_bnfx2"]
[ext_resource type="Texture2D" uid="uid://wv5qcobcvpoq" path="res://src/ui/buttons/arrow_.png" id="8_mfu6b"]
[ext_resource type="Texture2D" uid="uid://wgcovtfu4fot" path="res://src/ui/elements/gekso.png" id="9_0yv3s"]
[ext_resource type="Texture2D" uid="uid://blr2v35pet8yb" path="res://src/ui/elements/input.png" id="10_n5pao"]
[ext_resource type="Texture2D" uid="uid://cjbfs42jpw2ed" path="res://src/ui/buttons/green buttom base long.png" id="11_c771i"]
[ext_resource type="Texture2D" uid="uid://cxpni2esf80pi" path="res://src/ui/elements/update 1.png" id="15_hneh2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3cest"]
texture = ExtResource("10_n5pao")
texture_margin_left = 25.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b75u7"]
texture = ExtResource("10_n5pao")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5tp33"]
texture = ExtResource("11_c771i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3hy0n"]
texture = ExtResource("11_c771i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_j1crl"]
texture = ExtResource("11_c771i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rhrv2"]
texture = ExtResource("11_c771i")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bl7up"]
texture = ExtResource("11_c771i")

[sub_resource type="Animation" id="Animation_vhv4n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n6wnf"]
resource_name = "refreshing"
length = 0.35
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5avx2"]
_data = {
"RESET": SubResource("Animation_vhv4n"),
"refreshing": SubResource("Animation_n6wnf")
}

[node name="CharacterCreate" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t13y3")

[node name="APIRequest" type="HTTPRequest" parent="."]

[node name="APISummary" type="HTTPRequest" parent="."]

[node name="APICharacterCreate" type="HTTPRequest" parent="."]

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -37.0
offset_top = -48.0
offset_right = 379.0
offset_bottom = 831.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
pivot_offset = Vector2(0, 0.23)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_juskx")
stretch_mode = 4

[node name="CharacterTypeName" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CharacterTypeNameBackgroun" type="MarginContainer" parent="CharacterTypeName"]
layout_mode = 0
offset_left = 116.0
offset_top = 31.0
offset_right = 378.0
offset_bottom = 87.0

[node name="CharacterTypeNameBackgrounTexture" type="TextureRect" parent="CharacterTypeName/CharacterTypeNameBackgroun"]
layout_mode = 2
texture = ExtResource("3_yt8dn")

[node name="CharacterTypeName" type="MarginContainer" parent="CharacterTypeName"]
layout_mode = 0
offset_left = 194.0
offset_top = 42.0
offset_right = 252.0
offset_bottom = 75.0

[node name="CharacterTypeName" type="Label" parent="CharacterTypeName/CharacterTypeName"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Elves"

[node name="Characters" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -500.0
offset_bottom = -900.0
grow_horizontal = 2
grow_vertical = 2

[node name="Elves" type="MarginContainer" parent="Characters"]
light_mask = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 190.0
offset_top = 117.0
offset_right = 290.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 0

[node name="ElvesIcon" type="TextureRect" parent="Characters/Elves"]
layout_mode = 2
texture = ExtResource("4_vps2q")
expand_mode = 1

[node name="Dwarfs" type="MarginContainer" parent="Characters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 311.0
offset_top = 86.0
offset_right = 460.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2

[node name="DwarfsIcon" type="TextureRect" parent="Characters/Dwarfs"]
layout_mode = 2
texture = ExtResource("6_contp")
expand_mode = 1

[node name="Humans" type="MarginContainer" parent="Characters"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 84.0
offset_right = 164.0
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2

[node name="HumansIcon" type="TextureRect" parent="Characters/Humans"]
layout_mode = 2
texture = ExtResource("5_g5ftp")
expand_mode = 1

[node name="FeatureScheme" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 900.0
grow_horizontal = 2

[node name="FeatureSchemeContainer" type="MarginContainer" parent="FeatureScheme"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -161.0
offset_top = 302.0
offset_right = 161.0
offset_bottom = 598.0
grow_horizontal = 2

[node name="FeatureSchemeTexture" type="TextureRect" parent="FeatureScheme/FeatureSchemeContainer"]
layout_mode = 2
texture = ExtResource("9_0yv3s")

[node name="Archetype" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = -250.0
grow_horizontal = 2

[node name="ArchetypeBackground" type="MarginContainer" parent="Archetype"]
layout_mode = 0
offset_left = 184.0
offset_top = 250.0
offset_right = 306.0
offset_bottom = 288.0

[node name="CharacteCharacterFeatureBackgrounTexture" type="TextureRect" parent="Archetype/ArchetypeBackground"]
layout_mode = 2
texture = ExtResource("3_yt8dn")
expand_mode = 1

[node name="Archetype" type="MarginContainer" parent="Archetype"]
layout_mode = 0
offset_left = 199.0
offset_top = 256.165
offset_right = 250.0
offset_bottom = 278.165
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Archetype" type="Label" parent="Archetype/Archetype"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Agility"

[node name="CharacterChangeLeftButton" type="MarginContainer" parent="Archetype"]
layout_mode = 0
offset_left = 134.0
offset_top = 250.0
offset_right = 179.0
offset_bottom = 288.0

[node name="LeftChoiceButton" type="TextureButton" parent="Archetype/CharacterChangeLeftButton"]
layout_mode = 2
texture_normal = ExtResource("7_bnfx2")
texture_pressed = ExtResource("7_bnfx2")
texture_hover = ExtResource("7_bnfx2")
texture_focused = ExtResource("7_bnfx2")
ignore_texture_size = true
stretch_mode = 0

[node name="CharacterChangeRighttButton" type="MarginContainer" parent="Archetype"]
layout_mode = 0
offset_left = 311.0
offset_top = 250.0
offset_right = 356.0
offset_bottom = 288.0

[node name="RightChoiceButton" type="TextureButton" parent="Archetype/CharacterChangeRighttButton"]
layout_mode = 2
texture_normal = ExtResource("8_mfu6b")
texture_pressed = ExtResource("8_mfu6b")
texture_hover = ExtResource("8_mfu6b")
texture_focused = ExtResource("8_mfu6b")
ignore_texture_size = true
stretch_mode = 0

[node name="CharacterName" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 884.0
offset_right = 250.0
offset_bottom = 884.0
grow_horizontal = 2

[node name="CharacterNameContainer" type="MarginContainer" parent="CharacterName"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -239.0
offset_right = 155.0
offset_bottom = -182.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharacterNameInput" type="LineEdit" parent="CharacterName/CharacterNameContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_3cest")
theme_override_styles/focus = SubResource("StyleBoxTexture_b75u7")
placeholder_text = "Name"

[node name="CharacterCreateButton" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = -250.0
grow_horizontal = 2

[node name="CharacterCreateButtonContainer" type="MarginContainer" parent="CharacterCreateButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 151.0
offset_top = 769.0
offset_right = 342.0
offset_bottom = 831.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharacterCreateButton" type="Button" parent="CharacterCreateButton/CharacterCreateButtonContainer"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_5tp33")
theme_override_styles/hover = SubResource("StyleBoxTexture_3hy0n")
theme_override_styles/pressed = SubResource("StyleBoxTexture_j1crl")
theme_override_styles/disabled = SubResource("StyleBoxTexture_rhrv2")
theme_override_styles/focus = SubResource("StyleBoxTexture_bl7up")
text = "CREATE"

[node name="Refresh" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -246.0
offset_top = -629.0
offset_right = -206.0
offset_bottom = -589.0
grow_horizontal = 2
grow_vertical = 2

[node name="Refresh" type="MarginContainer" parent="Refresh"]
layout_mode = 1
offset_left = 182.0
offset_top = 553.0
offset_right = 286.0
offset_bottom = 663.0

[node name="Refresh" type="TextureRect" parent="Refresh/Refresh"]
layout_mode = 2
texture = ExtResource("15_hneh2")
expand_mode = 1
flip_h = true

[node name="RefreshAnimation" type="AnimationPlayer" parent="Refresh/Refresh/Refresh"]
libraries = {
"": SubResource("AnimationLibrary_5avx2")
}
autoplay = "refreshing"

[node name="Refresh_Label" type="MarginContainer" parent="Refresh"]
layout_mode = 0
offset_left = 157.0
offset_top = 658.0
offset_right = 321.0
offset_bottom = 698.0

[node name="Refresh_Label" type="Label" parent="Refresh/Refresh_Label"]
layout_mode = 2
theme_override_font_sizes/font_size = 21
text = "Wait..."
horizontal_alignment = 1

[connection signal="request_completed" from="APIRequest" to="." method="_on_api_request_request_completed"]
[connection signal="request_completed" from="APISummary" to="." method="_on_api_summary_request_completed"]
[connection signal="request_completed" from="APICharacterCreate" to="." method="_on_api_character_create_request_completed"]
[connection signal="pressed" from="Archetype/CharacterChangeLeftButton/LeftChoiceButton" to="." method="_on_left_choice_button_pressed"]
[connection signal="pressed" from="Archetype/CharacterChangeRighttButton/RightChoiceButton" to="." method="_on_right_choice_button_pressed"]
[connection signal="pressed" from="CharacterCreateButton/CharacterCreateButtonContainer/CharacterCreateButton" to="." method="_on_character_create_button_pressed"]
